[BlackBerry] notifyContentRendered() call missing in two spots https://bugs.webkit.org/show_bug.cgi?id=92153 RIM PR 173340

Reviewed by Antonio Gomes.

In dispatchDidFirstVisualLayout() and repaint() in
immediate mode, we render but don't notify the
WebPageClient that the content was modified.

In the long run, we should probably keep track of
the modified reason from within render() itself
and use this to automatically notify the client
from within blitContents() and/or invalidateWindow(),
depending on the rendering path. That's somewhat of
a medium-size undertaking though; for now, adding
the call directly to the renderVisibleContents()
call sites will do.

This patch also adds a blitVisibleContents() to
dispatchDidFirstVisualLayout() where it was
inexplicably missing, probably on account of
old code that was never updated.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::repaint):
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::resumeBackingStore):
* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::dispatchDidFirstVisuallyNonEmptyLayout):


Canonical link: https://commits.webkit.org/110050@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123610 268f45cc-cd09-0410-ab3c-d52691b4dbfc